# chess2vid

./: .gitignore  Makefile  README.md  make_video.sh  pyproject.toml
chess2vid/: __init__.py  actions.py  animator.py  blender.py  board.py  board_state.py  chess2vid.py  context.py  exceptions.py  location.py  material.py  obtain.py  piece_factory.py
resources/games/: Oro_vs_Asis_Gargatagli_2024.06.25.pgn  Phoenix_45_vs_marcoshuck_2024.09.05.pgn  manzato_vs_jakubhromek_2023.12.23.pgn  scholar.pgn  short copy 2.pgn  short copy.pgn  short.pgn
resources/stl/default/: bishop.stl  horse.stl  king.stl  knight.stl  pawn.stl  queen.stl  rook.stl
resources/stl/default/src/: bishop.blend  bishop.blend1  horse.blend  horse.blend1  king.blend  knight.blend  knight.blend1  pawn.blend  pieces.blend  queen.blend  rook.blend  rook.blend1
